MOSIP-40379-removed IGNORE from masterdata
Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

--- a/api-test/src/main/resources/masterdata/FetchRegCent/FetchRegCent.yml
+++ b/api-test/src/main/resources/masterdata/FetchRegCent/FetchRegCent.yml
@@ -747,8 +747,7 @@ FetchRegCent:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-500",
-      "message": "$IGNORE$"
+      "errorCode": "KER-MSD-500"
     }
   ]
 }'
@@ -779,8 +778,7 @@ FetchRegCent:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-500",
-      "message": "$IGNORE$"
+      "errorCode": "KER-MSD-500"
     }
   ]
 }'
