--- a/api-test/src/main/resources/masterdata/SearchDocCategories/SearchDocCategories.yml
+++ b/api-test/src/main/resources/masterdata/SearchDocCategories/SearchDocCategories.yml
@@ -70,7 +70,7 @@ SearchDocCategories:
     "requesttime": "$TIMESTAMP$"
   }'
       output: '{
-   "totalRecord": "$IGNORE$",
+   "totalRecord": "$REMOVE$",
    "data": [
      {
         "isActive": "$REMOVE$",
