--- a/api-test/src/main/resources/masterdata/ValidDocumentSearch/ValidDocumentSearch.yml
+++ b/api-test/src/main/resources/masterdata/ValidDocumentSearch/ValidDocumentSearch.yml
@@ -140,8 +140,7 @@ ValidDocumentSearch:
       output: '{
    "errors": [
     {
-         "errorCode": "KER-MSD-318",
-         "message": "$IGNORE$"
+         "errorCode": "KER-MSD-318"
      }
   ]
 }'
@@ -269,8 +268,7 @@ ValidDocumentSearch:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-317",
-      "message": "$IGNORE$"
+      "errorCode": "KER-MSD-317"
     }
   ]
 }'
