--- a/api-test/src/main/resources/masterdata/ValidDocumentFilter/ValidDocumentFilter.yml
+++ b/api-test/src/main/resources/masterdata/ValidDocumentFilter/ValidDocumentFilter.yml
@@ -129,8 +129,7 @@ ValidDocumentFilter:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-317",
-      "message": "$IGNORE$"
+      "errorCode": "KER-MSD-317"
     }
   ]
 }'
