--- a/api-test/src/main/resources/masterdata/ZoneUser/CreateZoneUser.yml
+++ b/api-test/src/main/resources/masterdata/ZoneUser/CreateZoneUser.yml
@@ -37,8 +37,7 @@ CreateZoneUser:
       output: '{
    "errors": [
     {
-      "errorCode": "KER-MSD-999",
-      "message": "$IGNORE$"
+      "errorCode": "KER-MSD-999"
     }
   ]
 }'
