--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -9,7 +9,7 @@
 	<name>kernel-masterdata-service</name>
 	<description>Mosip commons project </description>
 	<url>https://github.com/mosip/commons</url>
-	<version>1.3.0-beta.2</version>
+	<version>1.3.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -111,9 +111,9 @@
 		<kernel.applicant-type.version>1.3.0-beta.2</kernel.applicant-type.version>
 		<kernel.logger.logback.version>1.3.0-beta.2</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
-		<kernel.websubclient.api.version>1.3.0-beta.2</kernel.websubclient.api.version>
-		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
-		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
+		<kernel.websubclient.api.version>1.2.2-SNAPSHOT</kernel.websubclient.api.version>
+		<kernel.core.version>1.2.2-SNAPSHOT</kernel.core.version>
+		<mosip.openid.bridge.version>1.3.1-SNAPSHOT</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
