MOSIP-42842 added h2 depenency
Signed-off-by: kameshsr <kameshsr1338@gmail.com>

--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -76,6 +76,12 @@
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
