--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,11 +7,11 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.2.1.3-SNAPSHOT</version>
+		<version>1.2.1.3</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.2.1.3-SNAPSHOT</version>
+	<version>1.2.1.3</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
