--- a/helm/syncdata/Chart.yaml
+++ b/helm/syncdata/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: syncdata
 description: A Helm chart for MOSIP Syncdata module
 type: application
-version: 12.1.3
+version: 12.1.3-develop
 appVersion: ""
 dependencies:
   - name: common
