--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -403,3 +403,8 @@ mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
 
 #Spring AntPathMatcher for flexible path pattern support
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
+mosip.kernel.masterdata.enrichment.executor.timeout-seconds=30
+mosip.kernel.masterdata.enrichment.executor.min-fixed-thread-pool=2
+mosip.kernel.masterdata.enrichment.executor.max-fixed-thread-pool=8
