--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -123,3 +123,5 @@ mosip.iam.adapter.renewal-before-expiry-interval=15
 
 syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
 syncdata.cache.snapshot.cron=0 0 23 * * *
+
+management.endpoints.web.exposure.include=caches
