--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -81,12 +81,12 @@
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
-		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
+		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
 		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
-		<kernel.logger.version>1.3.0-beta.2</kernel.logger.version>
-		<kernel.crypto.version>1.3.0-beta.2</kernel.crypto.version>
+		<kernel.logger.version>1.3.0-SNAPSHOT</kernel.logger.version>
+		<kernel.crypto.version>1.3.0-SNAPSHOT</kernel.crypto.version>
 		<kernel.keymanager.version>1.3.0-beta.2</kernel.keymanager.version>
-		<kernel-websubclient-api.version>1.3.0-beta.2</kernel-websubclient-api.version>
+		<kernel-websubclient-api.version>1.3.0-SNAPSHOT</kernel-websubclient-api.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
