--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -113,7 +113,7 @@
 		<tss.version>0.3.0</tss.version>
 		<kernel.websubclient.api.version>1.3.0-SNAPSHOT</kernel.websubclient.api.version>
 		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
-		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
+		<mosip.openid.bridge.version>1.3.0-SNAPSHOT</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
