--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -85,7 +85,7 @@
 		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.3.0-SNAPSHOT</kernel.logger.version>
 		<kernel.crypto.version>1.3.0-SNAPSHOT</kernel.crypto.version>
-		<kernel.keymanager.version>1.3.0-beta.2</kernel.keymanager.version>
+		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
 		<kernel-websubclient-api.version>1.3.0-SNAPSHOT</kernel-websubclient-api.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
