--- a/helm/admin-service/values.yaml
+++ b/helm/admin-service/values.yaml
@@ -112,7 +112,7 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 700m
+    cpu: 500m
     memory: 2700Mi
   requests:
     cpu: 300m
@@ -190,7 +190,16 @@ podAnnotations: {}
 
 ## lifecycleHooks for the  container to automate configuration before or after startup.
 ##
-lifecycleHooks: {}
+lifecycleHooks:
+  preStop:
+    exec:
+      command:
+        - sh
+        - -c
+        - sleep 30
+
+## Termination grace perios : the maximum amount of time (in seconds) Kubernetes will wait for a container to gracefully shut down
+terminationGracePeriodSeconds: 60
 ## Custom Liveness probes for
 ##
 customLivenessProbe: {}
