--- a/helm/syncdata/values.yaml
+++ b/helm/syncdata/values.yaml
@@ -46,9 +46,9 @@ service:
   externalTrafficPolicy: Cluster
 image:
   registry: docker.io
-  repository: mosipid/kernel-syncdata-service
-  tag: 1.3.0-beta.2
-  ## Specify a imagePullPolicy
+  repository: mosipqa/kernel-syncdata-service
+  tag: 1.3.x
+  ## Specify a imagePllPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
   ##
