--- a/deploy/admin-apitestrig/values.yaml
+++ b/deploy/admin-apitestrig/values.yaml
@@ -3,5 +3,5 @@ modules:
     enabled: true
     image:
       repository: mosipid/apitest-masterdata
-      tag: 1.3.0-beta.2
+      tag: 1.3.0-SNAPSHOT
       pullPolicy: Always
