[DSD-9347]Update sonar analysis workflow reference
Signed-off-by: Mahesh-Binayak <76687012+Mahesh-Binayak@users.noreply.github.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -81,7 +81,7 @@ jobs:
   sonar_analysis:
     needs: build-maven-admin-services
     if: "${{  github.event_name != 'pull_request' }}"
-    uses: mosip/kattu/.github/workflows/maven-sonar-analysis.yml@master-java21
+    uses: mosip/kattu/.github/workflows/maven-sonar-analysis.yml@DSD-9347
     with:
       SERVICE_LOCATION: ./admin
     secrets:
